--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,11 @@ body .react-wrapper-mobile .intro .title {
   font-weight: bold;
 }
 
+body .react-wrapper-mobile .intro .description {
+  font-size: 6vw;
+  font-weight: normal;
+}
+
 body .react-wrapper-mobile .intro img {
   margin-left: 40vw;
   margin-top: 12vh;
@@ -436,6 +441,12 @@ body .slide-up {
   cursor: pointer;
 }
 
+.react-wrapper-desktop header .header-title :hover {
+  font-size: 2vw;
+  -webkit-transition: font-size 1s;
+  transition: font-size 1s;
+}
+
 .react-wrapper-desktop header .nav-list {
   height: 100%;
   width: 65vw;
@@ -453,8 +464,12 @@ body .slide-up {
 }
 
 .react-wrapper-desktop header .nav-list :hover {
-  border-bottom: solid 1px;
-  margin-bottom: 10px;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
   cursor: pointer;
 }
 
@@ -477,6 +492,11 @@ body .slide-up {
 .react-wrapper-desktop .intro .title {
   font-size: 2vw;
   font-weight: bold;
+}
+
+.react-wrapper-desktop .intro .description {
+  font-size: 1.5vw;
+  font-weight: normal;
 }
 
 .react-wrapper-desktop .intro img {
