--- a/src/style.scss
+++ b/src/style.scss
@@ -70,6 +70,10 @@ body {
         font-size: 8vw;
         font-weight: bold;
       }
+      .description {
+        font-size: 6vw;
+        font-weight: normal;
+      }
 
       img {
         margin-left: 40vw;
@@ -320,8 +324,14 @@ body {
 
     .header-title {
       font-size: 1.75vw;
+
       cursor: pointer;
+      :hover {
+        font-size: 2vw;
+        transition: font-size 1s;
+      }
     }
+
     .nav-list {
       height: 100%;
       width: 65vw;
@@ -333,8 +343,9 @@ body {
       font-size: 1.75vw;
 
       :hover {
-        border-bottom: solid 1px;
-        margin-bottom: 10px;
+        transform: scale(1.2);
+        transition: transform 1s;
+
         cursor: pointer;
       }
     }
@@ -352,7 +363,10 @@ body {
       font-size: 2vw;
       font-weight: bold;
     }
-
+    .description {
+      font-size: 1.5vw;
+      font-weight: normal;
+    }
     img {
       margin: 10vw;
       height: 32.5vw;
