--- a/src/style.css
+++ b/src/style.css
@@ -251,12 +251,12 @@ body .react-wrapper-mobile .projects .projects-list .projects-item img {
   -o-object-position: center;
      object-position: center;
   width: 100vw;
-  height: 29vh;
+  height: 29vw;
 }
 
 body .react-wrapper-mobile .projects .projects-list .projects-item .projects-text {
   position: relative;
-  margin-top: -30vh;
+  top: -30vh;
   height: 30vh;
   background: rgba(255, 255, 255, 0.8);
 }
@@ -300,7 +300,7 @@ body .react-wrapper-mobile .projects .projects-list .projects-item .projects-tex
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 7.5vh;
+  height: 7.5vw;
 }
 
 body .react-wrapper-mobile .projects .projects-list .projects-item .projects-text .links a {
@@ -434,6 +434,7 @@ body .slide-up {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   color: #ffffff;
+  z-index: 10;
 }
 
 .react-wrapper-desktop header .header-title {
@@ -473,10 +474,18 @@ body .slide-up {
   cursor: pointer;
 }
 
+.react-wrapper-desktop .bg-video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+
 .react-wrapper-desktop .intro {
   color: white;
   height: 90vh;
-  background: #00c2ff;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
