--- a/src/style.scss
+++ b/src/style.scss
@@ -324,6 +324,10 @@ body {
     color: #ffffff;
     z-index: 10;
 
+    .logo {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 4vw;
+    }
     .header-title {
       font-size: 1.75vw;
 
