--- a/src/style.css
+++ b/src/style.css
@@ -251,7 +251,7 @@ body .react-wrapper-mobile .projects .projects-list .projects-item img {
   -o-object-position: center;
      object-position: center;
   width: 100vw;
-  height: 29vw;
+  height: 29vh;
 }
 
 body .react-wrapper-mobile .projects .projects-list .projects-item .projects-text {
@@ -300,7 +300,7 @@ body .react-wrapper-mobile .projects .projects-list .projects-item .projects-tex
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 7.5vw;
+  height: 7.5vh;
 }
 
 body .react-wrapper-mobile .projects .projects-list .projects-item .projects-text .links a {
