--- a/src/style.scss
+++ b/src/style.scss
@@ -178,9 +178,11 @@ body {
       margin-top: 10vh;
       nav,
       .nav-list {
-        height: 22.5vh;
+        height: 23.5vh;
       }
       .projects-list {
+        position: relative;
+        top: -1vh;
         width: 100vw;
         height: 67.5vh;
         overflow-y: scroll;
@@ -192,13 +194,13 @@ body {
             object-fit: fill;
             object-position: center;
             width: 100vw;
-            height: 29vh;
+            height: 96.5%;
           }
 
           .projects-text {
             position: relative;
-            top: -30vh;
-            height: 30vh;
+            top: -100%;
+            height: 100%;
             background: rgba($color: #ffffff, $alpha: 0.8);
 
             .title {
@@ -498,13 +500,14 @@ body {
         width: 100%;
 
         img {
-          border-radius: 20px;
+          border-radius: 10px;
           object-fit: cover;
           object-position: center;
           height: 25vh;
           width: 30vw;
         }
         .projects-text {
+          margin-top: 2vh;
           .title {
             color: #666666;
             font-size: 2vw;
