fix: email typo

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -22,7 +22,7 @@ const socials = [
   },
   {
     name: "Mail",
-    href: "mailto:devfilipkastovskt@gmail.com",
+    href: "mailto:devfilipkastovsky@gmail.com",
     linkTitle: `Send me an email`,
   },
 ] as const;
