--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -10,38 +10,45 @@ const currentUrlPath = Astro.url.pathname.replace(/\/+$/, "");
 
 // Get url array from path
 // eg: /tags/tailwindcss => ['tags', 'tailwindcss']
-const breadcrumbList = currentUrlPath.split("/").slice(1);
+const breadcrumbs = currentUrlPath.split("/").slice(1);
 
 // if breadcrumb is Home > Posts > 1 <etc>
 // replace Posts with Posts (page number)
-breadcrumbList[0] === "blog" &&
-  breadcrumbList.splice(0, 2, `Posts (page ${breadcrumbList[1] || 1})`);
+breadcrumbs[0] === "blog" &&
+  breadcrumbs.splice(0, 2, `Posts (page ${breadcrumbs[1] || 1})`);
 ---
 
 <nav
-  class:list={["breadcrumb", hideOnPrint && "print:hidden"]}
+  class:list={[
+    "mx-auto mb-1 mt-8 w-full max-w-3xl px-4",
+    hideOnPrint && "print:hidden",
+  ]}
   aria-label="breadcrumb"
 >
   <ul>
-    <li>
-      <a href="/">Home</a>
-      <span aria-hidden="true">&gt</span>
+    <li class="inline">
+      <a href="/" class="capitalize opacity-70 hover:opacity-100">Home</a>
+      <span aria-hidden="true" class="opacity-70">&gt</span>
     </li>
     {
-      breadcrumbList.map((breadcrumb, index) =>
-        index + 1 === breadcrumbList.length ? (
-          <li>
+      breadcrumbs.map((breadcrumb, index) =>
+        index === breadcrumbs.length - 1 ? (
+          <li class="inline">
             <span
-              class={`${index > 0 ? "lowercase" : "capitalize"}`}
+              class:list={[
+                "opacity-70",
+                index > 0 ? "lowercase" : "capitalize",
+              ]}
               aria-current="page"
             >
-              {/* make the last part lowercase in Home > Tags > some-tag */}
               {breadcrumb}
             </span>
           </li>
         ) : (
-          <li>
-            <a href={`/${breadcrumb}`}>{breadcrumb}</a>
+          <li class="inline">
+            <a class="opacity-70 hover:opacity-100" href={`/${breadcrumb}`}>
+              {breadcrumb}
+            </a>
             <span aria-hidden="true">&gt</span>
           </li>
         )
@@ -49,21 +56,3 @@ breadcrumbList[0] === "blog" &&
     }
   </ul>
 </nav>
-
-<style>
-  .breadcrumb {
-    @apply mx-auto mb-1 mt-8 w-full max-w-3xl px-4;
-  }
-  .breadcrumb ul li {
-    @apply inline;
-  }
-  .breadcrumb ul li a {
-    @apply capitalize opacity-70;
-  }
-  .breadcrumb ul li span {
-    @apply opacity-70;
-  }
-  .breadcrumb ul li:not(:last-child) a {
-    @apply hover:opacity-100;
-  }
-</style>
