--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -46,3 +46,11 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   </main>
   <Footer />
 </Layout>
+
+<script>
+  import mediumZoom from "medium-zoom";
+  mediumZoom("#article img", {
+    margin: 24,
+    background: "rgba(0, 0, 0, 0.3)",
+  });
+</script>
