style: hide phonetics on mobile resolutions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const sortedPosts = getSortedPosts(posts);
       <h1 class="my-4 inline-block text-3xl font-bold sm:my-8 sm:text-5xl">
         Filip Kaštovský
       </h1>
-      <span>(filip ka&#643;tofski:)</span>
+      <span class="hidden sm:inline">(filip ka&#643;tofski:)</span>
 
       <p>
         I build stuff, mostly in TypeScript and Rust. I also write about it,
