chore(journey): rethink printable layout

--- a/src/pages/journey.astro
+++ b/src/pages/journey.astro
@@ -47,9 +47,9 @@ import Footer from "@/components/Footer.astro";
             >
               Eliminating client-side performance bottlenecks. Delivering
               multiple apps from initial commit to production. Leading a small
-              team of talented engineers. Making and acting out critical design
-              decisions. Utilizing effective devops practices to reduce friction
-              in the development process. Mentoring junior coleagues.
+              team of talented engineers and mentoring junior colleagues.
+              Utilizing effective devops practices to reduce friction in the
+              development process.
             </p>
           </Fragment>
           <Fragment slot="right">
@@ -94,9 +94,8 @@ import Footer from "@/components/Footer.astro";
       </div>
     </section>
   </main>
+  <Footer />
 </Layout>
-
-<Footer />
 
 <script>
   const printButton = document.querySelector("#print-button");
