chore(index): add emojis

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,10 +27,11 @@ const sortedPosts = getSortedPosts(posts);
       <span class="hidden sm:inline">(filip ka&#643;tofski:)</span>
 
       <p>
-        I build stuff, mostly in TypeScript and Rust. I also write about it,
-        sometimes.
+        I build stuff, mostly in TypeScript and Rust. I also write about it
+        (sometimes 😁).
       </p>
-      <p>This is my website!</p>
+
+      <p>This is my website! 🌐🌍</p>
     </section>
 
     <Hr />
