chore: remove emoji from landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const sortedPosts = getSortedPosts(posts);
 
       <p>
         I build stuff, mostly in TypeScript and Rust. I also write about it
-        (sometimes 😁).
+        (sometimes).
       </p>
 
       <p>This is my website! 🌐🌍</p>
